<resources>
    <string name="app_name">WorkoutTracker</string>
    <string name="workout_title">Workout Plans</string>
    <string name="weight_title">Weight (lbs)</string>
    <string name="deadlift">Deadlift 1x5+</string>
    <string name="pullups">Pull-Ups 3x12</string>
    <string name="rows">Row 3x12</string>
    <string name="hammerbiceps">Hammer Curls 4x12</string>
    <string name="regbiceps">Bicep Curls 4x12</string>
    <string name="complete">Completed Workout?</string>

    <string name="bench">Bench Press 3x5</string>
    <string name="overhead">Overhead Press 3x12</string>
    <string name="incline">Incline Bench Press 3x12</string>
    <string name="triceps">Tricep Pushdowns 6x12</string>
    <string name="lats">Lateral Raises 6x20</string>

    <string name="squat">Barbell Squats 3x5</string>
    <string name="romanian">Romanian Deadlift 3x12</string>
    <string name="legpress">Leg Press 3x12</string>
    <string name="legcurl">Leg Curls 3x12</string>
    <string name="calfraises">Calf Raises 3x12</string>

    <string name="new_workout">New Set of Workouts</string>

    <string name="your_title">Simple Workout Log</string>
</resources>
